updated background colour

--- a/front-end/hmcts-frontend/src/App.css
+++ b/front-end/hmcts-frontend/src/App.css
@@ -1,7 +1,7 @@
 body {
   place-items: center;
   font-family: Helvetica;
-  background-color: #c1bdbd80;
+  background: #746e6e80;
 }
 
 .case-card-container {
