--- a/front-end/hmcts-frontend/src/App.css
+++ b/front-end/hmcts-frontend/src/App.css
@@ -40,3 +40,13 @@ body {
 span {
   font-weight: bold;
 }
+
+.add-task-button {
+  background-color: rgb(58, 105, 177);
+  border-style: solid;
+  border-color: rgb(18, 18, 95);
+  border-radius: 15px;
+  height: 35px;
+  width: 100px;
+  font-size: 17px;
+}
