--- a/front-end/hmcts-frontend/src/modal.css
+++ b/front-end/hmcts-frontend/src/modal.css
@@ -47,3 +47,10 @@ form {
     margin-left: auto;
     margin-right: auto;
 }
+
+.error-message {
+    color: red;
+    font-size: 10px;
+    margin-top: 4.5px;
+    font-weight: normal;
+}
